SEGV in DirectivesStack::release(DirectiveSet*)

XMLWordPrintable

    • b105
    • Verified

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x000000010be9f683, pid=78528, tid=33539
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-192945.cthaling.aot)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-192945.cthaling.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, bsd-amd64)
      # Problematic frame:
      # V [libjvm.dylib+0x3b5683] DirectivesStack::release(DirectiveSet*)+0x21
      #
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      Stack: [0x000000012e806000,0x000000012e906000], sp=0x000000012e904b90, free space=1018k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x3b5683] DirectivesStack::release(DirectiveSet*)+0x21
      V [libjvm.dylib+0xabb658] WB_IsIntrinsicAvailable+0x81b
      j sun.hotspot.WhiteBox.isIntrinsicAvailable0(Ljava/lang/reflect/Executable;Ljava/lang/reflect/Executable;I)Z+0
      j sun.hotspot.WhiteBox.isIntrinsicAvailable(Ljava/lang/reflect/Executable;Ljava/lang/reflect/Executable;I)Z+9
      j sun.hotspot.WhiteBox.isIntrinsicAvailable(Ljava/lang/reflect/Executable;I)Z+4
      j IntrinsicAvailableTest.checkIntrinsicForCompilationLevel(Ljava/lang/reflect/Executable;I)V+17
      j IntrinsicAvailableTest.test()V+32
      j IntrinsicAvailableTest.main([Ljava/lang/String;)V+14

            Assignee:
            Nils Eliasson (Inactive)
            Reporter:
            Christian Thalinger (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: