8145331: SEGV in DirectivesStack::release(DirectiveSet*)

GetDefaultDirective was not updated in 8144873

Reviewed-by: twisti, kvn